# PrivateGPT

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LEGAL_NOTICE.md  LICENSE.md  MANIFEST.in  Provider.md  README.md  cached_proxies.txt  changelog.md  docker-compose.no-auth.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  render.yaml  test_e2b_quick.py  test_proxy.py  ty.toml
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: site_removal_request.yml
.github/workflows/: auto-assign-bug.yml  auto-merge-dependencies.yml  deploy-docs.yml  publish-to-pypi.yml  release-with-changelog.yml
docs/: DOCKER.md  README.md  api-reference.md  architecture.md  awesome-prompts.md  cli.md  client.md  contributing.md  decorators.md  deployment.md  getting-started.md  gguf.md  gitapi.md  index.md  inferno.md  litagent.md  litprinter.md  models.md  openai-api-server.md  provider-development.md  sanitize.md  scout.md  search.md  swiftcli.md  troubleshooting.md  weather.md  zeroart.md
docs/examples/: README.md  basic-chat.md  search-queries.md  streaming-responses.md
private_gpt/: AIauto.py  AIbase.py  __init__.py  __main__.py  cli.py  client.py  exceptions.py  model_fetcher.py  models.py  prompt_manager.py  update_checker.py  utils.py  version.py
private_gpt/Extra/: gguf.py  proxy_manager.py
private_gpt/Extra/GitToolkit/gitapi/: trending.py  utils.py
private_gpt/Extra/YTToolkit/: README.md  YTdownloader.py  transcriber.py
private_gpt/Extra/YTToolkit/ytapi/: README.md  captions.py  shorts.py  suggestions.py  utils.py  video.py
private_gpt/Extra/tempmail/: README.md  __init__.py  cli.py  emailnator.py
private_gpt/Provider/: Apriel.py  AvaSupernova.py  Ayle.py  Cohere.py  DeepAI.py  Deepinfra.py  EssentialAI.py  ExaAI.py  Falcon.py  Gemini.py  GithubChat.py  Groq.py  HeckAI.py  HuggingFace.py  IBM.py  Jadve.py  Netwrck.py  Nvidia.py  OpenRouter.py  Openai.py  OperaAria.py  PI.py  QwenLM.py  Sambanova.py  TextPollinationsAI.py  TogetherAI.py  TwoAI.py  TypliAI.py  Upstage.py  WiseCat.py  WrDoChat.py  __init__.py  ai4chat.py  akashgpt.py  cerebras.py  elmo.py  geminiapi.py  julius.py  k2think.py  llmchat.py  (+6 more)
private_gpt/Provider/AISEARCH/: PERPLEXED_search.py  Perplexity.py  README.md  __init__.py  ayesoul_search.py  iask_search.py  monica_search.py  webpilotai_search.py
private_gpt/Provider/Openai_comp/: DeepAI.py  PI.py  README.md  TogetherAI.py  TwoAI.py  __init__.py  ai4chat.py  akashgpt.py  avasupernova.py  ayle.py  base.py  cerebras.py  chatgpt.py  copilot.py  deepinfra.py  e2b.py  elmo.py  exaai.py  freeassist.py  heckai.py  huggingface.py  ibm.py  k2think.py  legacy_adapters.py  llmchat.py  llmchatco.py  meta.py  netwrck.py  nvidia.py  openrouter.py  qwenchat.py  sambanova.py  sonus.py  textpollinations.py  toolbaz.py  typliai.py  upstage.py  utils.py  venice.py  wisecat.py  (+1 more)
private_gpt/Provider/STT/: __init__.py  base.py  elevenlabs.py
private_gpt/Provider/TTI/: README.md  __init__.py  magicstudio.py  miragic.py  pollinations.py  together.py
private_gpt/Provider/TTS/: README.md  __init__.py  base.py  deepgram.py  elevenlabs.py  freetts.py  murfai.py  openai_fm.py  parler.py  pockettts.py  qwen.py  sherpa.py  speechma.py  streamElements.py
private_gpt/Provider/UNFINISHED/: ChatHub.py  ChutesAI.py  GizAI.py  Marcus.py  Qodo.py  XenAI.py  Youchat.py  brave_search.py  liner_api_request.py  samurai.py
private_gpt/litagent/: __init__.py  agent.py
private_gpt/scout/: README.md
private_gpt/scout/core/: crawler.py
private_gpt/search/: __init__.py  http_client.py
private_gpt/server/: __init__.py  __main__.py  config.py  exceptions.py  providers.py  request_models.py  request_processing.py  routes.py  server.py  ui_templates.py
private_gpt/swiftcli/: __init__.py
tests/: README.md  live_test.py
tests/providers/: test_AISEARCH.py  test_all_mocked.py  test_avasupernova.py  test_discovery.py  test_gemini.py  test_groq.py  test_huggingface.py  test_openai.py
tests/search/: __init__.py  test_brave.py  test_search_engines.py
tests/server/: test_request_processing.py
(+16 files in other folders)
