[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "private_gpt"
# Using dynamic version from private_gpt.version
dynamic = ["version"]
description = "Search for anything using Google, DuckDuckGo, phind.com, Contains AI models, can transcribe yt videos, temporary email and phone number generation, has TTS support, webai (terminal gpt and open interpreter) and offline LLMs and more"
readme = "README.md"
authors = [
    {name = "OEvortex", email = "koulabhay26@gmail.com"}
]
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications",
    "Topic :: Utilities",
]
keywords = [
    "search", "ai", "chatbot", "llm", "language-model", "gpt", "openai",
    "gemini", "claude", "llama", "search-engine", "text-to-speech", "tts",
    "text-to-image", "tti", "weather", "youtube", "toolkit", "utilities",
    "web-search", "duckduckgo", "google", "yep"
]
dependencies = [
    "setuptools",
    "wheel",
    "pip",
    "curl_cffi",
    "nest-asyncio",
    "colorama",
    "rich",
    "PyYAML",
    "html5lib",
    "psutil",
    "aiohttp",
    "httpx",
    "litprinter",
    "lxml>=5.2.2",
    "pydantic"
]

[project.scripts]
WEBS = "private_gpt.cli:main"
private_gpt = "private_gpt.cli:main"
private_gpt-server = "private_gpt.server.server:main"  
private_gpt-serve = "private_gpt.server.server:main"

[project.urls]
Source = "https://github.com/OEvortex/Private_GPT"
Tracker = "https://github.com/OEvortex/Private_GPT/issues"
YouTube = "https://youtube.com/@OEvortex"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.6",
    "pytest>=7.4.2",
]
api = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-multipart",
    "tiktoken",  # Added tiktoken for token counting support
    "jinja2",  # Template engine for custom Swagger UI
    "websockets>=11.0",
    "starlette",
    "regex"
]
parser = [
    "lxml>=5.2.2",  # Optional: faster HTML/XML parsing with lxml
]

[tool.pytest.ini_options]
markers = [
    "live: network-dependent search engine tests",
]

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]  # Specifies the root directory for packages (project root)
include = ["private_gpt*"]  # Tells find_packages to include only 'private_gpt' and its subpackages
exclude = ["__pycache__", "*.pyc"]  # Excludes common non-package directories/files
namespaces = true  # Enables automatic discovery of namespace packages

[tool.setuptools.dynamic]
version = {attr = "private_gpt.version.__version__"}

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yaml", "*.yml", "*.py", "*.html", "*.css", "*.js", "*.json", "*.png", "*.jpg", "*.jpeg", "*.gif", "*.svg"]
"private_gpt" = ["*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "F403", "F401"]